[package]
name = "day-05"
version = "0.1.0"
edition = "2021"
debuginfo-level = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build]
rustflags = ["-C", "symbol-mangling-version=v0"]

[profile.release]
debug = 1

[dependencies]

[dev-dependencies]
assertx = "1.1.7"
